--- a/scss/main.scss
+++ b/scss/main.scss
@@ -110,12 +110,6 @@
     }
 }
 
-.flex-col {
-    display: flex;
-    flex-direction: column;
-    height: calc(100vh - 6rem);
-}
-
 .question {
     flex: 1;
 }
@@ -147,38 +141,7 @@
     }
 }
 
-.disabled {
-    opacity: 0.5;
-    border: 1px solid #999999;
-    background-color: #cccccc;
-    color: #666666;
-    cursor: not-allowed;
-}
-
-.message {
-    padding: 1rem;
-    margin-bottom: 1.25rem;
-}
-.info {
-    background: $color-grey-light;
-}
-
-.green-info {
-    background: $color-ascent;
-    color: $color-white;
-}
-.red-info {
-    background: rgb(243, 139, 139);
-    color: $color-white;
-}
-
-.hidden {
-    display: none;
-}
-
-.show {
-    display: block;
-}
+@import 'util';
 
 // instructions page
 
@@ -187,5 +150,14 @@
 
     h2 {
         margin-bottom: 0rem;
+    }
+}
+
+// about page
+
+.about-info {
+    p {
+        margin-bottom: 1rem;
+        font-size: 1.1rem;
     }
 }
