--- a/root/css/main.css
+++ b/root/css/main.css
@@ -1,4 +1,4 @@
-/* line 8, scss/_base.scss */
+/* line 9, scss/_base.scss */
 *,
 *::before,
 *::after {
@@ -7,35 +7,35 @@
   box-sizing: border-box;
   margin: 0; }
 
-/* line 17, scss/_base.scss */
+/* line 18, scss/_base.scss */
 body {
   line-height: 1.6;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; }
 
-/* line 22, scss/_base.scss */
+/* line 23, scss/_base.scss */
 ul {
   list-style: none;
   padding: 0; }
 
-/* line 27, scss/_base.scss */
+/* line 28, scss/_base.scss */
 a {
   text-decoration: none;
   color: #000; }
 
-/* line 32, scss/_base.scss */
+/* line 33, scss/_base.scss */
 h1 {
   font-size: 2.5rem;
   font-weight: bold;
   margin-bottom: 1rem;
   color: #002fff; }
 
-/* line 39, scss/_base.scss */
+/* line 40, scss/_base.scss */
 h2 {
   font-size: 1.5rem;
   font-weight: bold;
   margin-bottom: 1rem; }
 
-/* line 45, scss/_base.scss */
+/* line 46, scss/_base.scss */
 button,
 input,
 input[type='checkbox'] {
@@ -184,6 +184,11 @@ input[type='checkbox'] {
   height: calc(100vh - 6rem); }
 
 /* line 7, scss/_util.scss */
+.flex-row {
+  display: flex;
+  justify-content: space-between; }
+
+/* line 12, scss/_util.scss */
 .disabled {
   opacity: 0.5;
   border: 1px solid #999999;
@@ -191,34 +196,34 @@ input[type='checkbox'] {
   color: #666666;
   cursor: not-allowed; }
 
-/* line 15, scss/_util.scss */
+/* line 20, scss/_util.scss */
 .message {
   padding: 1rem;
   margin-bottom: 1.25rem; }
 
-/* line 19, scss/_util.scss */
+/* line 24, scss/_util.scss */
 .info {
   background: #f2f2f2; }
 
-/* line 23, scss/_util.scss */
+/* line 28, scss/_util.scss */
 .green-info {
   background: #002fff;
   color: #ffffff; }
 
-/* line 27, scss/_util.scss */
+/* line 32, scss/_util.scss */
 .red-info {
   background: #f38b8b;
   color: #ffffff; }
 
-/* line 32, scss/_util.scss */
+/* line 37, scss/_util.scss */
 .hidden {
   display: none; }
 
-/* line 36, scss/_util.scss */
+/* line 41, scss/_util.scss */
 .show {
   display: block; }
 
-/* line 40, scss/_util.scss */
+/* line 45, scss/_util.scss */
 .current {
   font-weight: bold; }
 
@@ -233,3 +238,91 @@ input[type='checkbox'] {
 .about-info p {
   margin-bottom: 1rem;
   font-size: 1.1rem; }
+
+/* line 164, scss/main.scss */
+.contact-form {
+  color: #282524; }
+  /* line 167, scss/main.scss */
+  .contact-form .form-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+    /* line 172, scss/main.scss */
+    .contact-form .form-title span {
+      color: #282524; }
+  /* line 177, scss/main.scss */
+  .contact-form .form-group {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1rem; }
+    /* line 182, scss/main.scss */
+    .contact-form .form-group input {
+      width: 100%;
+      padding: 0.5rem;
+      border: 1px solid #bfbfbf;
+      font-size: 1.05rem;
+      outline: none;
+      font-weight: bold; }
+    /* line 191, scss/main.scss */
+    .contact-form .form-group input:focus {
+      border: 1px solid #002fff;
+      outline: 1.75px solid #002fff; }
+  /* line 197, scss/main.scss */
+  .contact-form .bottom-row {
+    margin-top: 3.5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+    /* line 202, scss/main.scss */
+    .contact-form .bottom-row .terms {
+      display: flex;
+      align-items: flex-start; }
+      /* line 206, scss/main.scss */
+      .contact-form .bottom-row .terms input[type='checkbox'] {
+        margin-right: 0.5rem; }
+      /* line 209, scss/main.scss */
+      .contact-form .bottom-row .terms label {
+        display: inline-block;
+        line-height: 0.8rem;
+        font-size: 0.95rem;
+        max-width: 400px; }
+    /* line 217, scss/main.scss */
+    .contact-form .bottom-row .buttons {
+      font-size: 1.05rem; }
+      /* line 220, scss/main.scss */
+      .contact-form .bottom-row .buttons .btn {
+        font-size: inherit;
+        padding: 0.5rem 1rem; }
+      /* line 224, scss/main.scss */
+      .contact-form .bottom-row .buttons .btn-reset {
+        color: #002fff;
+        font-weight: bold; }
+
+@media screen and (max-width: 768px) {
+  /* line 11, scss/_mediaquery.scss */
+  .contact-form .form-title span {
+    font-size: 0.9rem; }
+  /* line 15, scss/_mediaquery.scss */
+  .contact-form .bottom-row {
+    flex-direction: column; }
+    /* line 18, scss/_mediaquery.scss */
+    .contact-form .bottom-row .terms {
+      width: 100%;
+      display: flex; }
+      /* line 21, scss/_mediaquery.scss */
+      .contact-form .bottom-row .terms label {
+        font-size: 0.78rem;
+        flex: 1; }
+    /* line 27, scss/_mediaquery.scss */
+    .contact-form .bottom-row .buttons {
+      display: flex;
+      width: 100%;
+      margin-top: 1.5rem; }
+      /* line 32, scss/_mediaquery.scss */
+      .contact-form .bottom-row .buttons .btn {
+        font-size: 0.9rem;
+        padding: 0.25rem 0.5rem;
+        flex: 1; }
+      /* line 38, scss/_mediaquery.scss */
+      .contact-form .bottom-row .buttons .btn-reset {
+        flex: 1; } }
