changed button order on smaller media

--- a/root/css/main.css
+++ b/root/css/main.css
@@ -325,4 +325,5 @@ input[type='checkbox'] {
         flex: 1; }
       /* line 38, scss/_mediaquery.scss */
       .contact-form .bottom-row .buttons .btn-reset {
-        flex: 1; } }
+        flex: 1;
+        order: 2; } }
