--- a/scss/_mediaquery.scss
+++ b/scss/_mediaquery.scss
@@ -37,6 +37,7 @@
 
                 .btn-reset {
                     flex: 1;
+                    order: 2;
                 }
             }
         }
