--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,7 +16,7 @@
     background-color: $color-grey-light;
     overflow-x: hidden;
     transition: 0.5s;
-    padding-top: 30px;
+    padding-top: 4rem;
 
     li {
         margin-bottom: 1.1rem;
@@ -37,6 +37,7 @@
 .menu-btn {
     font-size: 1.5rem;
     cursor: pointer;
+    z-index: 1000;
 }
 
 .show-sidebar {
